syntax = "proto3";

service AuthValidator {
  rpc Validate (TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  string userId = 2;
  string tenantId = 3;
}
